yaml_parser/tests/fail/comment-in-plain-multiline-value.snap
---
source: yaml_parser/tests/fail.rs
---
parse error at line 3, column 3
  |
3 |   word2
  |   ^
expected `...`
